update routes includ portfolio

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -19,6 +19,11 @@
   .text-about {
     width: 80%;
     margin: auto;
+    text-align: center;
+
+    h1 {
+      text-align: center;
+    }
 
     p {
       margin: auto;
