--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -7,9 +7,9 @@
   color: #fff;
   margin: auto;
   
-  p {
-    margin: auto;
+  .text-contact {
     width: 80%;
+    margin: auto;
     margin-top: revert;
     text-align: justify;
     font-size: large;
