--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,8 @@
 #component-header {
   background: rgb(66, 66, 66);
   display: inline-flex;
-  width: 100vw;
-  // width: 100%;
+  // width: 99vw;
+  width: 100%;
   justify-content: center;
 
   h2 {
