--- a/src/styles/certificates.scss
+++ b/src/styles/certificates.scss
@@ -1,10 +1,12 @@
 #page-certificates {
   background: #333;
   text-align: center;
-  height: 100vh;
-  width: 100vw;
+  // height: 100vh;
+  // width: 100vw;
   padding-top: 5vh;
   color: #fff;
+  text-align: -webkit-center;
+  margin: auto;
 
   #items {
     display: flex;
