--- a/src/styles/hackathon.scss
+++ b/src/styles/hackathon.scss
@@ -1,10 +1,11 @@
 #page-hackathon {
   background: #333;
   text-align: center;
-  height: 100vh;
-  width: 100vw;
+  // height: 100vh;
+  // width: 100vw;
   padding-top: 5vh;
   color: #fff;
+  text-align: -webkit-center;
 
   #items {
     display: flex;
@@ -24,12 +25,11 @@
       pointer-events: none;
     }
   
-      img {
-        height: 70vh;
-        width: 80vw;
-        margin: 10px;
-        // object-fit: cover;
-      }
-    
+    img {
+      height: 70vh;
+      width: 80vw;
+      margin: 10px;
+      // object-fit: cover;
+    }
   }
 }
