update page contact

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -10,7 +10,7 @@
   .text-contact {
     width: 80%;
     margin: auto;
-    margin-top: revert;
+    // margin-top: revert;
     text-align: justify;
     font-size: large;
   }
